cambio barra navegacion

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
         <nav>
             <ul class="linkmenu">
+                <li><a href="Inicio">Inicio</a></li>
                 <li><a href="paginas/recetas.html">Recetas</a></li>
                 <li><a href="paginas/biografia.html">Biografia</a></li>
                 <li><a href="paginas/contacto.html">Contacto</a></li>
