--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -30,6 +30,7 @@
             <ul class="linkmenu">
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="recetas.html">Recetas</a></li>
+                <li><a href="contacto">Contacto</a></li>
                 <li><a href="biografia.html">Biografia</a></li>
                 <li><a href="blog.html">blog</a></li>
             </ul>
