--- a/paginas/recetas.html
+++ b/paginas/recetas.html
@@ -30,6 +30,7 @@
         <nav>
             <ul class="linkmenu">
                 <li><a href="../index.html">Inicio</a></li>
+                <li><a href="recetas.html">Recetas</a></li>
                 <li><a href="biografia.html">Biografia</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
                 <li><a href="blog.html">Blog</a></li>
