--- a/paginas/biografia.html
+++ b/paginas/biografia.html
@@ -32,6 +32,7 @@
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="recetas.html">Recetas</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="Biografia">Biografia</a></li>
                 <li><a href="blog.html">blog</a></li>
             </ul>
         </nav>
