--- a/paginas/blog.html
+++ b/paginas/blog.html
@@ -33,6 +33,7 @@
                 <li><a href="recetas.html">Recetas</a></li>
                 <li><a href="biografia.html">Biografia</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="blog.html">Blog</a></li>
             </ul>
         </nav>
 
