cambio barra navegacion

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <nav>
             <ul class="linkmenu">
-                <li><a href="Inicio">Inicio</a></li>
+                <li><a href="index.html">Inicio</a></li>
                 <li><a href="paginas/recetas.html">Recetas</a></li>
                 <li><a href="paginas/biografia.html">Biografia</a></li>
                 <li><a href="paginas/contacto.html">Contacto</a></li>
@@ -49,7 +49,7 @@
                 <source src="Imagenes/trailer.mp4" controls>
             </video>
         </div>
-
+        
         <p>
             Bienvenido a Cocinando con Buffalo, tu destino culinario para aprender a cocinar de manera autodidacta y
             convertirte en un maestro en la cocina. En esta plataforma, te sumergirás en el apasionante mundo de la
