--- a/paginas/biografia.html
+++ b/paginas/biografia.html
@@ -31,8 +31,8 @@
             <ul class="linkmenu">
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="recetas.html">Recetas</a></li>
+                <li><a href="biografia.html">Biografia</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
-                <li><a href="Biografia">Biografia</a></li>
                 <li><a href="blog.html">blog</a></li>
             </ul>
         </nav>
