adaptacion de 2 paginas moviles

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     
                 </div>
                 <a class="navbar-brand" href="#">
-                    <h1>Cocinando con Buffalo</h1>
+                    <h1 class="titulo">Cocinando con Buffalo</h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -62,7 +62,7 @@
 
             <article class="listaseccion">
                 <div class="portadas">
-                    <img class="pailamarina" src="Imagenes/paila marina.jpeg" alt="paila marina">
+                    <img class="imgportada" src="Imagenes/paila marina.jpeg" alt="paila marina">
                     <h3> <span>Almuerzos</span> </h3>
                     <p> Disfruta de una gran variedad de almuerzos para todos los gustos
                     </p>
@@ -72,7 +72,7 @@
 
             <article class="listaseccion">
                 <div class="portadas">
-                    <img class="omelette" src="Imagenes/omelette.jpeg" alt="desayunos">
+                    <img class="imgportada" src="Imagenes/omelette.jpeg" alt="desayunos">
                     <h3> <span>Desayunos</span> </h3>
                     <P> Desayunar es la parte mas importante del dia
                     </P>
@@ -82,7 +82,7 @@
 
             <article class="listaseccion">
                 <div class="portadas">
-                    <img class="calzonesrotos" src="Imagenes/calzones rotos.jpeg" alt="Postres">
+                    <img class="imgportada" src="Imagenes/calzones rotos.jpeg" alt="Postres">
                     <h3> <span>Postres</span> </h3>
                     <p> Porque los postres van directo al corazon
                     </p>
