--- a/paginas/recetas.html
+++ b/paginas/recetas.html
@@ -33,7 +33,7 @@
     
                 </div>
                 <a class="navbar-brand" href="#">
-                    <h1>Cocinando con Buffalo</h1>
+                    <h1 class="titulo">Cocinando con Buffalo</h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
