adaptacion 2 paginas moviles

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="linkmenu">
+                    <ul class="navbar-nav linkmenu">
                         <li><a href="index.html">Inicio</a></li>
                         <li><a href="paginas/recetas.html">Recetas</a></li>
                         <li><a href="paginas/biografia.html">Biografia</a></li>
