--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Descubre recetas fáciles y deliciosas de Cocinando con Buffalo. Explora nuestra colección de recetas y descubre los sabores del mundo.">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,22 +18,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
-    <title>Cocinando con Buffalo</title>
+    <title> Cocinando con Buffalo: Recetas ricas, faciles y deliciosas </title>
 </head>
 
 <body>
 
-    <header >
+    <header>
 
         <nav class="navbar navbar-expand-lg ">
-         
 
             <div class="container-fluid">
                 <div>
                     <a href="index.html">
                         <img class="logoweb1" src="Imagenes/logoweb1.png" alt="Logoweb">
                     </a>
-    
+
                 </div>
                 <a class="navbar-brand" href="#">
                     <h1 class="titulo">Cocinando con Buffalo</h1>
@@ -58,39 +59,42 @@
 
         <img class="collage" src="Imagenes/bannercollage.jpg" alt="collage">
 
-        <section class="contenedor-seccion">
+        <div class="contenedor-destacados">
 
-            <article class="listaseccion">
-                <div class="portadas">
-                    <img class="imgportada" src="Imagenes/paila marina.jpeg" alt="paila marina">
-                    <h3> <span>Almuerzos</span> </h3>
-                    <p> Disfruta de una gran variedad de almuerzos para todos los gustos
-                    </p>
-                    <a class="botonmas" href=""> ver mas </a>
-                </div>
-            </article>
+            <section class="contenedor-seccion">
 
-            <article class="listaseccion">
-                <div class="portadas">
-                    <img class="imgportada" src="Imagenes/omelette.jpeg" alt="desayunos">
-                    <h3> <span>Desayunos</span> </h3>
-                    <P> Desayunar es la parte mas importante del dia
-                    </P>
-                    <a class="botonmas" href=""> ver mas </a>
-                </div>
-            </article>
+                <article class="listaseccion">
+                    <div class="portadas">
+                        <img class="imgportada" src="Imagenes/paila marina.jpeg" alt="paila marina">
+                        <h3> <span>Almuerzos</span> </h3>
+                        <p> Disfruta de una gran variedad de almuerzos para todos los gustos
+                        </p>
+                        <a class="botonmas" href=""> ver mas </a>
+                    </div>
+                </article>
 
-            <article class="listaseccion">
-                <div class="portadas">
-                    <img class="imgportada" src="Imagenes/calzones rotos.jpeg" alt="Postres">
-                    <h3> <span>Postres</span> </h3>
-                    <p> Porque los postres van directo al corazon
-                    </p>
-                    <a class="botonmas" href=""> ver mas </a>
-                </div>
-            </article>
+                <article class="listaseccion">
+                    <div class="portadas">
+                        <img class="imgportada" src="Imagenes/omelette.jpeg" alt="desayunos">
+                        <h3> <span>Desayunos</span> </h3>
+                        <P> Desayunar es la parte mas importante del dia
+                        </P>
+                        <a class="botonmas" href=""> ver mas </a>
+                    </div>
+                </article>
 
-        </section>
+                <article class="listaseccion">
+                    <div class="portadas">
+                        <img class="imgportada" src="Imagenes/calzones rotos.jpeg" alt="Postres">
+                        <h3> <span>Postres</span> </h3>
+                        <p> Porque los postres van directo al corazon
+                        </p>
+                        <a class="botonmas" href=""> ver mas </a>
+                    </div>
+                </article>
+
+            </section>
+        </div>
 
         <div>
             <video class="videotrailer" controls>
