--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+    content="Descubre recetas fáciles y deliciosas de Cocinando con Buffalo. Explora nuestra colección de recetas y descubre los sabores del mundo.">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -39,7 +41,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                       <ul class="linkmenu">
+                       <ul class="navbar-nav linkmenu">
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="recetas.html">Recetas</a></li>
                 <li><a href="biografia.html">Biografia</a></li>
