--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <meta name="description"
         content="Descubre recetas fáciles y deliciosas de Cocinando con Buffalo. Explora nuestra colección de recetas y descubre los sabores del mundo.">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Open+Sans:ital,wght@1,600;1,800&display=swap"
         rel="stylesheet">
@@ -30,7 +28,7 @@
             <div class="container-fluid">
                 <div>
                     <a href="index.html">
-                        <img class="logoweb1" src="Imagenes/logoweb1.png" alt="Logoweb">
+                        <img class="logoweb1" src="imagines/logoweb1.png" alt="Logoweb">
                     </a>
 
                 </div>
@@ -57,7 +55,7 @@
 
     <main>
 
-        <img class="collage" src="Imagenes/bannercollage.jpg" alt="collage">
+        <img class="collage" src="imagines/bannercollage.jpg" alt="collage">
 
         <div class="contenedor-destacados">
 
@@ -65,8 +63,8 @@
 
                 <article class="listaseccion">
                     <div class="portadas">
-                        <img class="imgportada" src="Imagenes/paila marina.jpeg" alt="paila marina">
-                        <h3> <span>Almuerzos</span> </h3>
+                        <img class="imgportada" src="imagines/paila marina.jpeg" alt="paila marina">
+                        <h3> Almuerzos </h3>
                         <p> Disfruta de una gran variedad de almuerzos para todos los gustos
                         </p>
                         <a class="botonmas" href=""> ver mas </a>
@@ -75,8 +73,8 @@
 
                 <article class="listaseccion">
                     <div class="portadas">
-                        <img class="imgportada" src="Imagenes/omelette.jpeg" alt="desayunos">
-                        <h3> <span>Desayunos</span> </h3>
+                        <img class="imgportada" src="imagines/omelette.jpeg" alt="desayunos">
+                        <h3> Desayunos</h3>
                         <P> Desayunar es la parte mas importante del dia
                         </P>
                         <a class="botonmas" href=""> ver mas </a>
@@ -85,8 +83,8 @@
 
                 <article class="listaseccion">
                     <div class="portadas">
-                        <img class="imgportada" src="Imagenes/calzones rotos.jpeg" alt="Postres">
-                        <h3> <span>Postres</span> </h3>
+                        <img class="imgportada" src="imagines/calzones rotos.jpeg" alt="Postres">
+                        <h3> Postres </h3>
                         <p> Porque los postres van directo al corazon
                         </p>
                         <a class="botonmas" href=""> ver mas </a>
@@ -98,7 +96,7 @@
 
         <div>
             <video class="videotrailer" controls>
-                <source src="Imagenes/trailer.mp4" controls>
+                <source src="imagines/trailer.mp4" controls>
             </video>
         </div>
 
@@ -128,31 +126,31 @@
             <ol>
                 <li>
                     <a href="https://www.youtube.com/@cocinandoconbuffalo459" target="_blank">
-                        <img class="logo" src="Imagenes/logoyoutube.png" alt="log youtube">
+                        <img class="logo" src="imagines/logoyoutube.png" alt="log-youtube">
                     </a>
                 </li>
 
                 <li>
                     <a href="https://www.instagram.com/cocinandoconbuffalo" target="_blank">
-                        <img class="logo" src="Imagenes/logoinstagram.png" alt="logo instagram">
+                        <img class="logo" src="imagines/logoinstagram.png" alt="logo-instagram">
                     </a>
                 </li>
 
                 <li>
                     <a href="https://www.tiktok.com/@cocinandoconbuffalo" target="_blank">
-                        <img class="logo" src="Imagenes/logotiktok.png" alt="logo tiktok">
+                        <img class="logo" src="imagines/logotiktok.png" alt="logo-tiktok">
                     </a>
                 </li>
 
                 <li>
                     <a href="https://web.facebook.com/profile.php?id=100092195286119" target="_blank">
-                        <img class="logo" src="Imagenes/logofacebook.png" alt="facebook">
+                        <img class="logo" src="imagines/logofacebook.png" alt="facebook">
                     </a>
                 </li>
 
                 <li>
                     <a href="www.linkedin.com/in/césar-pérez-cornejo-1090251b0" target="_blank">
-                        <img class="logo" src="Imagenes/logolinkedin.png" alt="linkedin">
+                        <img class="logo" src="imagines/logolinkedin.png" alt="linkedin">
                     </a>
                 </li>
             </ol>
