--- a/paginas/recetas.html
+++ b/paginas/recetas.html
@@ -7,8 +7,6 @@
     <meta name="description"
         content="Descubre recetas fáciles y deliciosas de Cocinando con Buffalo. Explora nuestra colección de recetas y descubre los sabores del mundo.">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Open+Sans:ital,wght@1,600;1,800&display=swap"
         rel="stylesheet">
@@ -29,8 +27,8 @@
 
             <div class="container-fluid">
                 <div>
-                    <a href="index.html">
-                        <img class="logoweb1" src="../Imagenes/logoweb1.png" alt="Logoweb">
+                    <a href="../index.html">
+                        <img class="logoweb1" src="../imagines/logoweb1.png" alt="Logoweb">
                     </a>
 
                 </div>
@@ -65,7 +63,7 @@
 
             <article class="listarecetas">
                 <div class="receta">
-                    <img class="churrascas" src="../Imagenes/Churrascas.jpg" alt="churrascas">
+                    <img class="churrascas" src="../imagines/Churrascas.jpg" alt="churrascas">
                     <h3><b> Churrascas </b></h3>
                     <p> Pan Chileno a la parrilla
                         una receta tradicional del campo
@@ -76,7 +74,7 @@
 
             <article class="listarecetas">
                 <div class="receta">
-                    <img class="papasfritas" src="../Imagenes/papasfritas.jpeg" alt="papas fritas">
+                    <img class="papasfritas" src="../imagines/papasfritas.jpeg" alt="papas fritas">
                     <h3><b> Papas Fritas</b> </h3>
                     <P> Si te gustan las papas fritas de bolsa
                         esta es tu receta
@@ -87,7 +85,7 @@
 
             <article class="listarecetas">
                 <div class="receta">
-                    <img class="lomosaltado" src="../Imagenes/lomosaltado.jpg" alt="lomo saltado">
+                    <img class="lomosaltado" src="../imagines/lomosaltado.jpg" alt="lomo saltado">
                     <h3><b>Lomo Saltado</b></h3>
                     <p> Un clasico de la gastronomia peruana
                         que no puede faltar en tu mesa
@@ -112,31 +110,31 @@
             <ol>
                 <li>
                     <a href="https://www.youtube.com/@cocinandoconbuffalo459" target="_blank">
-                        <img class="logo" src="../Imagenes/logoyoutube.png" alt="log youtube">
+                        <img class="logo" src="../imagines/logoyoutube.png" alt="log-youtube">
                     </a>
                 </li>
 
                 <li>
                     <a href="https://www.instagram.com/cocinandoconbuffalo" target="_blank">
-                        <img class="logo" src="../Imagenes/logoinstagram.png" alt="logo instagram">
+                        <img class="logo" src="../imagines/logoinstagram.png" alt="logo-instagram">
                     </a>
                 </li>
 
                 <li>
                     <a href="https://www.tiktok.com/@cocinandoconbuffalo" target="_blank">
-                        <img class="logo" src="../Imagenes/logotiktok.png" alt="logo tiktok">
+                        <img class="logo" src="../imagines/logotiktok.png" alt="logo-tiktok">
                     </a>
                 </li>
 
                 <li>
                     <a href="https://web.facebook.com/profile.php?id=100092195286119" target="_blank">
-                        <img class="logo" src="../Imagenes/logofacebook.png" alt="facebook">
+                        <img class="logo" src="../imagines/logofacebook.png" alt="facebook">
                     </a>
                 </li>
 
                 <li>
                     <a href="www.linkedin.com/in/césar-pérez-cornejo-1090251b0" target="_blank">
-                        <img class="logo" src="../Imagenes/logolinkedin.png" alt="linkedin">
+                        <img class="logo" src="../imagines/logolinkedin.png" alt="linkedin">
                     </a>
                 </li>
             </ol>
