--- a/paginas/blog.html
+++ b/paginas/blog.html
@@ -7,8 +7,6 @@
     <meta name="description"
         content="Descubre recetas fáciles y deliciosas de Cocinando con Buffalo. Explora nuestra colección de recetas y descubre los sabores del mundo.">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Open+Sans:ital,wght@1,600;1,800&display=swap"
         rel="stylesheet">
@@ -28,8 +26,8 @@
 
             <div class="container-fluid">
                 <div>
-                    <a href="index.html">
-                        <img class="logoweb1" src="../Imagenes/logoweb1.png" alt="Logoweb">
+                    <a href="../index.html">
+                        <img class="logoweb1" src="../imagines/logoweb1.png" alt="Logoweb">
                     </a>
 
                 </div>
@@ -154,41 +152,43 @@
         <hr>
 
         <h3>Todos los derechos reservados Cocinando con Buffalo</h3>
+
         <div>
 
             <ol>
                 <li>
                     <a href="https://www.youtube.com/@cocinandoconbuffalo459" target="_blank">
-                        <img class="logo" src="../Imagenes/logoyoutube.png" alt="log youtube">
+                        <img class="logo" src="../imagines/logoyoutube.png" alt="log-youtube">
                     </a>
                 </li>
 
                 <li>
                     <a href="https://www.instagram.com/cocinandoconbuffalo" target="_blank">
-                        <img class="logo" src="../Imagenes/logoinstagram.png" alt="logo instagram">
+                        <img class="logo" src="../imagines/logoinstagram.png" alt="logo-instagram">
                     </a>
                 </li>
 
                 <li>
                     <a href="https://www.tiktok.com/@cocinandoconbuffalo" target="_blank">
-                        <img class="logo" src="../Imagenes/logotiktok.png" alt="logo tiktok">
+                        <img class="logo" src="../imagines/logotiktok.png" alt="logo-tiktok">
                     </a>
                 </li>
 
                 <li>
                     <a href="https://web.facebook.com/profile.php?id=100092195286119" target="_blank">
-                        <img class="logo" src="../Imagenes/logofacebook.png" alt="facebook">
+                        <img class="logo" src="../imagines/logofacebook.png" alt="facebook">
                     </a>
                 </li>
 
                 <li>
                     <a href="www.linkedin.com/in/césar-pérez-cornejo-1090251b0" target="_blank">
-                        <img class="logo" src="../Imagenes/logolinkedin.png" alt="linkedin">
+                        <img class="logo" src="../imagines/logolinkedin.png" alt="linkedin">
                     </a>
                 </li>
             </ol>
 
         </div>
+
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
