--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                 <article class="listaseccion">
                     <div class="portadas">
                         <img class="imgportada" src="imagines/paila marina.jpeg" alt="paila marina">
-                        <h3> Almuerzos </h3>
-                        <p> Disfruta de una gran variedad de almuerzos para todos los gustos
+                        <h3> Paila Marina</h3>
+                        <p> Disfruta de un clasico de la comida Chilena
                         </p>
                         <a class="botonmas" href=""> ver mas </a>
                     </div>
@@ -73,9 +73,10 @@
 
                 <article class="listaseccion">
                     <div class="portadas">
-                        <img class="imgportada" src="imagines/omelette.jpeg" alt="desayunos">
-                        <h3> Desayunos</h3>
-                        <P> Desayunar es la parte mas importante del dia
+                        <img class="imgportada" src="imagines/Hamburguesa casera.jpg" alt="desayunos">
+                        <h3> Hamburguesa Casera</h3>
+                        <P> Disfruta de una Hamburguesa
+                            como las mejores del mundo
                         </P>
                         <a class="botonmas" href=""> ver mas </a>
                     </div>
@@ -83,9 +84,9 @@
 
                 <article class="listaseccion">
                     <div class="portadas">
-                        <img class="imgportada" src="imagines/calzones rotos.jpeg" alt="Postres">
-                        <h3> Postres </h3>
-                        <p> Porque los postres van directo al corazon
+                        <img class="imgportada" src="imagines/panamasado.jpg" alt="Postres">
+                        <h3> Pan Amasado </h3>
+                        <p> Hacer tu propio pan es algo magico
                         </p>
                         <a class="botonmas" href=""> ver mas </a>
                     </div>
