--- a/paginas/recetas.html
+++ b/paginas/recetas.html
@@ -53,48 +53,106 @@
         </nav>
 
     </header>
-    <hr>
+    
 
     <main>
-
-        <h2> Recetas </h2>
 
         <section class="contenedor-recetas">
 
             <article class="listarecetas">
                 <div class="receta">
-                    <img class="churrascas" src="../imagines/Churrascas.jpg" alt="churrascas">
-                    <h3><b> Churrascas </b></h3>
-                    <p> Pan Chileno a la parrilla
-                        una receta tradicional del campo
-                    </p>
-                    <a href=""> ver mas </a>
-                </div>
-            </article>
+                    <img class="imagen-recetas" src="../imagines/imagenalmuezos.jpg" alt="almuerzos">
 
-            <article class="listarecetas">
-                <div class="receta">
-                    <img class="papasfritas" src="../imagines/papasfritas.jpeg" alt="papas fritas">
-                    <h3><b> Papas Fritas</b> </h3>
-                    <P> Si te gustan las papas fritas de bolsa
-                        esta es tu receta
-                    </P>
-                    <a href=""> ver mas </a>
-                </div>
-            </article>
-
-            <article class="listarecetas">
-                <div class="receta">
-                    <img class="lomosaltado" src="../imagines/lomosaltado.jpg" alt="lomo saltado">
-                    <h3><b>Lomo Saltado</b></h3>
-                    <p> Un clasico de la gastronomia peruana
-                        que no puede faltar en tu mesa
+                    <p class="descripcion-collage"> Disfruta de una gran variedad de platos
                     </p>
-                    <a href=""> ver mas </a>
+                    <a class="bonton-mas" href=""> Ver más  </a>
                 </div>
             </article>
 
         </section>
+
+        <section class="contenedor-recetas">
+
+            <article class="listarecetas">
+                <div class="receta">
+                    <img class="imagen-recetas"  src="../imagines/imagencomidachilena.jpg" alt="comida chilena">
+
+                    <P class="descripcion-collage"> Todo el sabor de las gastronomía Chilena
+                    </P>
+                    <a class="bonton-mas" href=""> Ver más </a>
+                </div>
+            </article>
+        </section>
+
+        <section class="contenedor-recetas">
+
+            <article class="listarecetas">
+                <div class="receta">
+                    <img class="imagen-recetas"  src="../imagines/imagenpanaderia.jpg" alt="panaderia">
+
+                    <p class="descripcion-collage"> Hacer tu propio Pan te llenara de vida
+                    </p>
+                    <a class="bonton-mas" href=""> Ver más </a>
+                </div>
+            </article>
+        </section>
+
+
+        <section class="contenedor-recetas">
+
+            <article class="listarecetas">
+                <div class="receta">
+                    <img class="imagen-recetas"  src="../imagines/imagenpapas.jpg" alt="papas">
+
+                    <p class="descripcion-collage"> Si hay algo que a todos nos gusta, son las Papas
+                    </p>
+                    <a class="bonton-mas" href=""> Ver más </a>
+                </div>
+            </article>
+        </section>
+
+        <section class="contenedor-recetas">
+
+            <article class="listarecetas">
+                <div class="receta">
+                    <img class="imagen-recetas"  src="../imagines/imageninternacional.jpg"
+                        alt="platos internacionales">
+
+                    <P class="descripcion-collage"> Platos internacionales directos a tu mesa
+                    </P>
+                    <a class="bonton-mas" href=""> Ver más </a>
+                </div>
+            </article>
+        </section>
+
+        <section class="contenedor-recetas">
+
+            <article class="listarecetas">
+                <div class="receta">
+                    <img class="imagen-recetas"  src="../imagines/imagenpollos.jpg" alt="recetas pollo">
+
+                    <p class="descripcion-collage"> Una variedad de pollos para todos los gustos
+                    </p>
+                    <a class="bonton-mas" href=""> Ver más </a>
+                </div>
+            </article>
+        </section>
+
+        <section class="contenedor-recetas">
+
+
+            <article class="listarecetas">
+                <div class="receta">
+                    <img class="imagen-recetas"  src="../imagines/imagensalsas.jpg" alt="salsas">
+
+                    <p class="descripcion-collage"> Las mejores acompañantes para tus comidas
+                    </p>
+                    <a class="bonton-mas" href=""> Ver más </a>
+                </div>
+            </article>
+        </section>
+
+
 
 
 
