--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description"
         content="Descubre recetas fáciles y deliciosas de Cocinando con Buffalo. Explora nuestra colección de recetas y descubre los sabores del mundo.">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link
         href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Open+Sans:ital,wght@1,600;1,800&display=swap"
         rel="stylesheet">
@@ -28,7 +29,7 @@
             <div class="container-fluid">
                 <div>
                     <a href="index.html">
-                        <img class="logoweb1" src="imagines/logoweb1.png" alt="Logoweb">
+                        <img class="logoweb1" src="imagenes/logo-web.png" alt="Logoweb">
                     </a>
 
                 </div>
@@ -55,7 +56,7 @@
 
     <main>
 
-        <img class="collage" src="imagines/bannercollage.jpg" alt="collage">
+        <img class="collage" src="imagenes/banner-collage.jpg" alt="collage">
 
         <div class="contenedor-destacados">
 
@@ -63,9 +64,9 @@
 
                 <article class="listaseccion">
                     <div class="portadas">
-                        <img class="imgportada" src="imagines/paila marina.jpeg" alt="paila marina">
+                        <img class="imgportada" src="imagenes/paila-marina.jpeg" alt="paila marina">
                         <h3> Paila Marina</h3>
-                        <p> Disfruta de un clasico de la comida Chilena
+                        <p> Disfruta de un clásico de la comida Chilena.
                         </p>
                         <a class="botonmas" href=""> ver mas </a>
                     </div>
@@ -73,10 +74,10 @@
 
                 <article class="listaseccion">
                     <div class="portadas">
-                        <img class="imgportada" src="imagines/Hamburguesa casera.jpg" alt="desayunos">
-                        <h3> Hamburguesa Casera</h3>
-                        <P> Disfruta de una Hamburguesa
-                            como las mejores del mundo
+                        <img class="imgportada" src="imagenes/helado.jpg" alt="helado casero">
+                        <h3> Helado Casero</h3>
+                        <P> Disfruta de un rico helado hecho por ti mismo.
+
                         </P>
                         <a class="botonmas" href=""> ver mas </a>
                     </div>
@@ -84,9 +85,9 @@
 
                 <article class="listaseccion">
                     <div class="portadas">
-                        <img class="imgportada" src="imagines/panamasado.jpg" alt="Postres">
+                        <img class="imgportada" src="imagenes/pan-amasado.jpg" alt="pan amasado">
                         <h3> Pan Amasado </h3>
-                        <p> Hacer tu propio pan es algo magico
+                        <p> Hacer tu propio pan es algo mágico.
                         </p>
                         <a class="botonmas" href=""> ver mas </a>
                     </div>
@@ -95,68 +96,70 @@
             </section>
         </div>
 
-        <div>
-            <video class="videotrailer" controls>
-                <source src="imagines/trailer.mp4" controls>
-            </video>
+
+        <div data-aos="fade-up-right" class="contenedor-bienvenida">
+
+            <img class="imagen-redonda" src="imagenes/img-biografia1.jpg" alt="imagen buffalo">
+
+            <p class="texto-bienvenida"> Hola y bienvenidos a Cocinando con Buffalo. Soy un cocinero autodidacta que te
+                enseñará a cocinar recetas ricas y fáciles de la forma más sencilla posible. Disfruta de una gran
+                variedad de recetas de almuerzos, postres, bebidas y todo lo que puedas imaginar.
+            </p>
+
         </div>
 
-        <p>
-            Bienvenido a Cocinando con Buffalo, tu destino culinario para aprender a cocinar de manera autodidacta y
-            convertirte en un maestro en la cocina. En esta plataforma, te sumergirás en el apasionante mundo de la
-            gastronomía y descubrirás una amplia gama de recetas deliciosas que van desde platos tradicionales hasta
-            creaciones innovadoras.
+        <div data-aos="fade-up-left" class="contenedor-bienvenida">
 
-            Nuestro enfoque se basa en la pasión por la cocina y el deseo de aprender a través de la experimentación. No
-            importa si eres un principiante o un cocinero experimentado, aquí encontrarás recetas detalladas, consejos
-            útiles y guías paso a paso para elevar tus habilidades culinarias.
+            <p class="texto-bienvenida-blog">En la sección de blog, podrás encontrar el origen de muchas especias y
+                dónde mejor puedes usarlas para que tus platos rebosen de sabor y color</p>
+            <img class="imagen-redonda-blog" src="imagenes/especias-juntas.jpg" alt="especias">
 
-            Desde desayunos reconfortantes hasta cenas gourmet, Cocinando con Buffalo te inspirará a preparar platos
-            deliciosos en la comodidad de tu hogar. ¡Prepárate para descubrir el chef que llevas dentro!
-        </p>
+        </div>
+
 
     </main>
 
     <footer>
-        <hr>
-
-        <h3>Todos los derechos reservados Cocinando con Buffalo</h3>
-
+        
+        
         <div>
 
             <ol>
                 <li>
                     <a href="https://www.youtube.com/@cocinandoconbuffalo459" target="_blank">
-                        <img class="logo" src="imagines/logoyoutube.png" alt="log-youtube">
+                        <img class="logo" src="imagenes/logo-youtube.png" alt="log-youtube">
                     </a>
                 </li>
 
                 <li>
                     <a href="https://www.instagram.com/cocinandoconbuffalo" target="_blank">
-                        <img class="logo" src="imagines/logoinstagram.png" alt="logo-instagram">
+                        <img class="logo" src="imagenes/logo-instagram.png" alt="logo-instagram">
                     </a>
                 </li>
 
                 <li>
                     <a href="https://www.tiktok.com/@cocinandoconbuffalo" target="_blank">
-                        <img class="logo" src="imagines/logotiktok.png" alt="logo-tiktok">
+                        <img class="logo" src="imagenes/logo-tiktok.png" alt="logo-tiktok">
                     </a>
                 </li>
 
                 <li>
                     <a href="https://web.facebook.com/profile.php?id=100092195286119" target="_blank">
-                        <img class="logo" src="imagines/logofacebook.png" alt="facebook">
+                        <img class="logo" src="imagenes/logo-facebook.png" alt="facebook">
                     </a>
                 </li>
 
                 <li>
                     <a href="www.linkedin.com/in/césar-pérez-cornejo-1090251b0" target="_blank">
-                        <img class="logo" src="imagines/logolinkedin.png" alt="linkedin">
+                        <img class="logo" src="imagenes/logo-linkedin.png" alt="linkedin">
                     </a>
                 </li>
             </ol>
 
         </div>
+
+        <h4>Todos los derechos reservados Cocinando con Buffalo </h4>
+
 
     </footer>
 
@@ -164,7 +167,10 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
 
-
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 
 </body>
 
