--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -27,7 +27,7 @@
             <div class="container-fluid">
                 <div>
                     <a href="../index.html">
-                        <img class="logoweb1" src="../imagines/logoweb1.png" alt="Logoweb">
+                        <img class="logoweb1" src="../imagenes/logo-web.png" alt="Logoweb">
                     </a>
 
                 </div>
@@ -80,45 +80,45 @@
     </main>
 
     <footer>
-        <hr>
-
-        <h3>Todos los derechos reservados Cocinando con Buffalo</h3>
+        
 
         <div>
 
             <ol>
                 <li>
                     <a href="https://www.youtube.com/@cocinandoconbuffalo459" target="_blank">
-                        <img class="logo" src="../imagines/logoyoutube.png" alt="log-youtube">
+                        <img class="logo" src="../imagenes/logo-youtube.png" alt="log-youtube">
                     </a>
                 </li>
 
                 <li>
                     <a href="https://www.instagram.com/cocinandoconbuffalo" target="_blank">
-                        <img class="logo" src="../imagines/logoinstagram.png" alt="logo-instagram">
+                        <img class="logo" src="../imagenes/logo-instagram.png" alt="logo-instagram">
                     </a>
                 </li>
 
                 <li>
                     <a href="https://www.tiktok.com/@cocinandoconbuffalo" target="_blank">
-                        <img class="logo" src="../imagines/logotiktok.png" alt="logo-tiktok">
+                        <img class="logo" src="../imagenes/logo-tiktok.png" alt="logo-tiktok">
                     </a>
                 </li>
 
                 <li>
                     <a href="https://web.facebook.com/profile.php?id=100092195286119" target="_blank">
-                        <img class="logo" src="../imagines/logofacebook.png" alt="facebook">
+                        <img class="logo" src="../imagenes/logo-facebook.png" alt="facebook">
                     </a>
                 </li>
 
                 <li>
                     <a href="www.linkedin.com/in/césar-pérez-cornejo-1090251b0" target="_blank">
-                        <img class="logo" src="../imagines/logolinkedin.png" alt="linkedin">
+                        <img class="logo" src="../imagenes/logo-linkedin.png" alt="linkedin">
                     </a>
                 </li>
             </ol>
 
         </div>
+
+        <h4>Todos los derechos reservados Cocinando con Buffalo </h4>
 
     </footer>
 
