--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="description"
         content="Descubre recetas fáciles y deliciosas de Cocinando con Buffalo. Explora nuestra colección de recetas y descubre los sabores del mundo.">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link
         href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Open+Sans:ital,wght@1,600;1,800&display=swap"
         rel="stylesheet">
@@ -97,7 +96,7 @@
         </div>
 
 
-        <div data-aos="fade-up-right" class="contenedor-bienvenida">
+        <div class="contenedor-bienvenida">
 
             <img class="imagen-redonda" src="imagenes/img-biografia1.jpg" alt="imagen buffalo">
 
@@ -108,7 +107,7 @@
 
         </div>
 
-        <div data-aos="fade-up-left" class="contenedor-bienvenida">
+        <div class="contenedor-bienvenida">
 
             <p class="texto-bienvenida-blog">En la sección de blog, podrás encontrar el origen de muchas especias y
                 dónde mejor puedes usarlas para que tus platos rebosen de sabor y color</p>
@@ -167,10 +166,7 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
 
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
+   
 
 </body>
 
