--- a/paginas/recetas.html
+++ b/paginas/recetas.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Descubre recetas fáciles y deliciosas de Cocinando con Buffalo. Explora nuestra colección de recetas y descubre los sabores del mundo.">
+        content="recetas ricas y fáciles, almuerzo, panaderia, internacional, pollos, chilena">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <link
