--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
         </div>
 
-        <div class="contenedor-bienvenida">
+        <div class="contenedor-bienvenida-blog">
 
             <p class="texto-bienvenida-blog">En la sección de blog, podrás encontrar el origen de muchas especias y
                 dónde mejor puedes usarlas para que tus platos rebosen de sabor y color</p>
